# Raw-Gent

./: .gitignore  CODE_EXPLANATION.md  LICENSE  README.md  example.tsx
backend/: auth.py  pyproject.toml  server.py
backend/Raw_Gent/: main_agent.py  prompt.py  tools.py
backend/Raw_Gent/sub_agents/bug_fix_workflow/bug_fix_sub_agents/fix_code/: fix_code_agent.py
backend/Raw_Gent/sub_agents/bug_fix_workflow/bug_fix_sub_agents/review_code/: review_code_agent.py  review_code_prompt.py
backend/Raw_Gent/sub_agents/bug_fix_workflow/bug_fix_sub_agents/test_code/: test_code_agent.py
backend/Raw_Gent/sub_agents/feature_workflow/: feature_workflow_agent.py
backend/core/: config.py
backend/github/: github_app_client.py  github_client.py
backend/models/: agent_model.py
backend/routes/: add_repo_route.py  agent_runner.py  agent_runner_routes.py  auth_routes.py  internal_routes.py  webhook.py
backend/services/: github_app_service.py  job.py  redis.py  ws.py
backend/tests/: test_auth.py
frontend/: package.json  vercel.json
frontend/src/: App.tsx
frontend/src/components/: AppSidebar.tsx  Chatui.tsx  CodeAnimation.tsx  FeatureCards.tsx  Hero3DScene.tsx  MainContent.tsx  Navbar.tsx  TopBar.tsx
frontend/src/hooks/: use-toast.ts  ws_hooks.ts
frontend/src/pages/: Home.tsx  Index.tsx  Task.tsx
frontend/src/schemas/: repo_types.schemas.ts  run_agent.schemas.ts
frontend/src/services/: api.ts  auth.ts  github.ts  github_api.ts  run_agent.ts
job_runner/: Dockerfile  job_runner_models.py  main.py  requirements.txt
job_runner/Raw_Gent/: main_agent.py
(+15 files in other folders)
